# daisy_seed_project

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
docs/: help.md  random_notes.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/utils/: logger.rs  mod.rs  num.rs
